# currency-converter

./: CMakeLists.txt
inc/: CurrencyParser.hpp  DialogTableCurrencyRates.hpp  mainwindow.hpp
src/: CurrencyParser.cpp  DialogTableCurrencyRates.cpp  WidgetsHandler.cpp  main.cpp  mainwindow.cpp
